--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HW 02</title>
+    <title>HW 03</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,25 +13,32 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css " />
   </head>
   <body class="page">
-    <!-- Heder section -->
+    <!-- Header section -->
+
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span></a>
-        <ul class="header-list">
-          <li class="header-item">
-            <a class="header-link current" href="./">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="./">Контакты</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <nav class="header-nav">
+          <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span></a>
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link current" href="./">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="./">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
@@ -39,10 +46,12 @@
     <!-- Main section -->
     <main>
       <!-- Hero section -->
-      <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
-      </section>
+      <div class="hero-container">
+        <section class="hero">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn" type="button">Заказать услугу</button>
+        </section>
+      </div>
       <section class="about">
         <ul>
           <li>
