--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body class="page">
     <!-- Heder section -->
-    <header class="header">
+    <header class="header-container">
       <nav class="header-nav">
         <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span> </a>
         <ul class="header-list">
@@ -37,6 +37,8 @@
       <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
+
+    <div class="line-container"></div>
 
     <!-- Main section -->
 
