--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body class="page">
     <!-- Heder section -->
-    <header class="header-container">
+    <header class="header container">
       <nav class="header-nav">
         <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span> </a>
         <ul class="header-list">
@@ -45,9 +45,9 @@
     <main>
       <!-- Portfolio section -->
 
-      <section class="section portfolio">
+      <section class="section portfolio container">
         <h1 class="portfolio"></h1>
-        <ul class="list">
+        <ul class="list container">
           <li><button class="all button current" type="button">Все</button></li>
           <li><button class="web button current" type="button">Веб-сайты</button></li>
           <li><button class="app button current" type="button">Приложения</button></li>
@@ -56,19 +56,19 @@
         </ul>
 
         <ul>
-          <li class="">
+          <li class="container">
             <img src="./images/works/img.jpeg" alt="ноутбук" width="370" height="294" />
             <h2 class="site">Технокряк</h2>
             <p class="profession" lang="ru">Веб-сайт</p>
           </li>
 
-          <li class="">
+          <li class="container">
             <img src="./images/works/poster.jpeg" alt="баскетболисты" width="370" height="294" />
             <h2 class="site">Постер New Orlean vs Golden Star</h2>
             <p class="profession" lang="en">Дизайн</p>
           </li>
 
-          <li>
+          <li class="container">
             <img
               src="./images/works/restourant.jpeg"
               alt="баскетболисты"
@@ -123,7 +123,7 @@
       </section>
     </main>
     <!-- Footer section -->
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo-link" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
       <address class="address">
         г. Киев, пр-т Леси Украинки, 26
