не могу разобраться с карточками наша команда

--- a/box.html
+++ b/box.html
@@ -29,3 +29,21 @@
     </div>
   </body>
 </html>
+<header class="header container">
+  <nav class="header-nav">
+    <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span> </a>
+    <ul class="header-list">
+      <li class="header-item">
+        <a class="header-link" href="./">Студия</a>
+      </li>
+      <li class="header-item">
+        <a class="header-link current" href="./portfolio.html">Портфолио</a>
+      </li>
+      <li class="header-item">
+        <a class="header-link" href="./">Контакты</a>
+      </li>
+    </ul>
+  </nav>
+  <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+  <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+</header>
