--- a/index.html
+++ b/index.html
@@ -55,133 +55,108 @@
       </section>
 
       <section class="about">
-        <div class="container">
-        <ul>
-          <li>
-            <h2 class="about-title">Внимание к деталям</h2>
-            <p class="about-item">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h2 class="about-title">Пунктуальность</h2>
-            <p class="about-item">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h2 class="about-title">Планирование</h2>
-            <p class="about-item">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h2 class="about-title">Современные технологии</h2>
-            <p class="about-item">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container pege-header-container">
+          <ul class="page-about header-nav">
+            <li>
+              <h2 class="about-title">Внимание к деталям</h2>
+              <p class="about-item">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h2 class="about-title">Пунктуальность</h2>
+              <p class="about-item">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h2 class="about-title">Планирование</h2>
+              <p class="about-item">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h2 class="about-title">Современные технологии</h2>
+              <p class="about-item">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
         </div>
-        
       </section>
       <!-- About secyion -->
-      <section class="about-team ">
-        <div class="container"
-        <h2 class="about-titlee">Чем мы занимаемся</h2>
-        <ul class="about-list">
-          <li class="about-item">
-            <img
-              class="about-img"
-              src="./images/About/img.jpeg"
-              alt="набор текста на клавиатуре"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="about-item">
-            <img
-              class="about-img"
-              src="./images/About/img1.jpeg"
-              alt="выбор темы на смартфоне"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="about-item">
-            <img
-              class="about-img"
-              src="./images/About/img2.jpeg"
-              alt="планшет с картинкой"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="about-team">
+        <div class="container">
+          <h2 class="about-titlee">Чем мы занимаемся</h2>
+          <ul class="about-list header-nav">
+            <li class="about-item">
+              <img
+                class="about-img"
+                src="./images/About/img.jpeg"
+                alt="набор текста на клавиатуре"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="about-item">
+              <img
+                class="about-img"
+                src="./images/About/img1.jpeg"
+                alt="выбор темы на смартфоне"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="about-item">
+              <img
+                class="about-img"
+                src="./images/About/img2.jpeg"
+                alt="планшет с картинкой"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
         </div>
       </section>
       <!-- Team section -->
       <section class="team">
         <div class="container">
           <h3 class="it-team">Наша команда</h3>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team/img1.jpeg"
-              alt="сотрудник-1"
-              width="270"
-              height="260"
-            />
-            <h3 class="it">Игорь Демьяненко</h3>
-            <p class="profession" lang="en">Product Designer</p>
-          </li>
+          <ul class="team-list container">
+            <li class="team-item">
+              <img class="team-img" src="./images/team/img1.jpeg" alt="сотрудник-1" />
+              <h3 class="it">Игорь Демьяненко</h3>
+              <p class="profession" lang="en">Product Designer</p>
+            </li>
 
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team/img2.jpeg"
-              alt="сотрудник-2"
-              width="270"
-              height="260"
-            />
-            <h3 class="it">Ольга Репина</h3>
-            <p class="profession" lang="en">Frontend Developer</p>
-          </li>
+            <li class="team-item">
+              <img class="team-img" src="./images/team/img2.jpeg" alt="сотрудник-2" />
+              <h3 class="it">Ольга Репина</h3>
+              <p class="profession" lang="en">Frontend Developer</p>
+            </li>
 
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team/img3.jpeg"
-              alt="сотрудник-3"
-              width="270"
-              height="260"
-            />
-            <h3 class="it">Николай Тарасов</h3>
-            <p class="profession" lang="en">Marketing</p>
-          </li>
+            <li class="team-item">
+              <img class="team-img" src="./images/team/img3.jpeg" alt="сотрудник-3" />
+              <h3 class="it">Николай Тарасов</h3>
+              <p class="profession" lang="en">Marketing</p>
+            </li>
 
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/team/img4.jpeg"
-              alt="сотрудник-4"
-              width="270"
-              height="260"
-            />
-            <h3 class="it">Михаил Ермаков</h3>
-            <p class="profession" lang="en">UI Designer</p>
-          </li>
-        </ul></div>
-        
+            <li class="team-item">
+              <img class="team-img" src="./images/team/img4.jpeg" alt="сотрудник-4" />
+              <h3 class="it">Михаил Ермаков</h3>
+              <p class="profession" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer section -->
-    <footer class="footer">
-      <div class="container">
-        <a class="logo-link" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
+    <footer class="footer section">
+      <div class="footer-container">
+        <a class="logo-link-footer" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
         <address class="address">
-          г. Киев, пр-т Леси Украинки, 26
+          <p class="add">Киев, пр-т Леси Украинки, 26</p>
           <ul>
             <li><a class="address-mail" href="mailto:info@example.com">info@example.com</a></li>
             <li><a class="address-phone" href="tel:+380991111111">+38 099 111 11 11</a></li>
