--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,25 @@
   </head>
   <body class="page">
     <!-- Heder section -->
-    <header class="header container">
-      <nav class="header-nav">
-        <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span> </a>
-        <ul class="header-list">
-          <li class="header-item">
-            <a class="header-link" href="./">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="./">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+    <header class="header">
+      <div class="container pege-header-container">
+        <nav class="header-nav">
+          <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span></a>
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link" href="./">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="./">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
 
     <div class="line-container"></div>
@@ -45,93 +47,100 @@
     <main>
       <!-- Portfolio section -->
 
-      <section class="section portfolio container">
-        <h1 class="portfolio"></h1>
-        <ul class="list container">
-          <li><button class="all button current" type="button">Все</button></li>
-          <li><button class="web button current" type="button">Веб-сайты</button></li>
-          <li><button class="app button current" type="button">Приложения</button></li>
-          <li><button class="dis button current" type="button">Дизайн</button></li>
-          <li><button class="markt button current" type="button">Маркетинг</button></li>
-        </ul>
+      <section class="section portfolio">
+        <div class="container">
+          <h1 class="portfolio"></h1>
+          <ul class="list-container">
+            <li><button class="all button current" type="button">Все</button></li>
+            <li><button class="web button current" type="button">Веб-сайты</button></li>
+            <li><button class="app button current" type="button">Приложения</button></li>
+            <li><button class="dis button current" type="button">Дизайн</button></li>
+            <li><button class="markt button current" type="button">Маркетинг</button></li>
+          </ul>
+        </div>
+      </section>
+      <section class="img-portfolio">
+        <div class="img-container container">
+          <ul class="img-list">
+            <li>
+              <img src="./images/works/img.jpeg" alt="ноутбук" width="370" height="294" />
+              <h2 class="site">Технокряк</h2>
+              <p class="profession" lang="ru">Веб-сайт</p>
+            </li>
 
-        <ul>
-          <li class="container">
-            <img src="./images/works/img.jpeg" alt="ноутбук" width="370" height="294" />
-            <h2 class="site">Технокряк</h2>
-            <p class="profession" lang="ru">Веб-сайт</p>
-          </li>
+            <li>
+              <img src="./images/works/poster.jpeg" alt="баскетболисты" width="370" height="294" />
+              <h2 class="site">Постер New Orlean vs Golden Star</h2>
+              <p class="profession" lang="en">Дизайн</p>
+            </li>
 
-          <li class="container">
-            <img src="./images/works/poster.jpeg" alt="баскетболисты" width="370" height="294" />
-            <h2 class="site">Постер New Orlean vs Golden Star</h2>
-            <p class="profession" lang="en">Дизайн</p>
-          </li>
+            <li>
+              <img
+                src="./images/works/restourant.jpeg"
+                alt="баскетболисты"
+                width="370"
+                height="294"
+              />
+              <h2 class="site">Ресторан Seafood</h2>
+              <p class="profession" lang="en">Приложение</p>
+            </li>
 
-          <li class="container">
-            <img
-              src="./images/works/restourant.jpeg"
-              alt="баскетболисты"
-              width="370"
-              height="294"
-            />
-            <h2 class="site">Ресторан Seafood</h2>
-            <p class="profession" lang="en">Приложение</p>
-          </li>
+            <li>
+              <img src="./images/works/prime.jpeg" alt="наушники" width="370" height="294" />
+              <h2 class="site">Проект Prime</h2>
+              <p class="profession" lang="en">Маркетинг</p>
+            </li>
 
-          <li>
-            <img src="./images/works/prime.jpeg" alt="наушники" width="370" height="294" />
-            <h2 class="site">Проект Prime</h2>
-            <p class="profession" lang="en">Маркетинг</p>
-          </li>
+            <li>
+              <img src="./images/works/boxes.jpeg" alt="две коробки" width="370" height="294" />
+              <h2 class="site">Проект Boxes</h2>
+              <p class="profession" lang="en">Приложение</p>
+            </li>
 
-          <li>
-            <img src="./images/works/boxes.jpeg" alt="две коробки" width="370" height="294" />
-            <h2 class="site">Проект Boxes</h2>
-            <p class="profession" lang="en">Приложение</p>
-          </li>
+            <li>
+              <img src="./images/works/inspiration.jpeg" alt="компьютер" width="370" height="294" />
+              <h2 class="site">Inspiration has no Borders</h2>
+              <p class="profession" lang="en">Веб-сайт</p>
+            </li>
 
-          <li>
-            <img src="./images/works/inspiration.jpeg" alt="компьютер" width="370" height="294" />
-            <h2 class="site">Inspiration has no Borders</h2>
-            <p class="profession" lang="en">Веб-сайт</p>
-          </li>
+            <li>
+              <img src="./images/works/izdanie.jpeg" alt="книга" width="370" height="294" />
+              <h2 class="site">Издание Limited Edition</h2>
+              <p class="profession" lang="en">Дизайн</p>
+            </li>
 
-          <li>
-            <img src="./images/works/izdanie.jpeg" alt="книга" width="370" height="294" />
-            <h2 class="site">Издание Limited Edition</h2>
-            <p class="profession" lang="en">Дизайн</p>
-          </li>
+            <li>
+              <img src="./images/works/lab.jpeg" alt="бирка с логотипом" width="370" height="294" />
+              <h2 class="site">Проект LAB</h2>
+              <p class="profession" lang="en">Маркетинг</p>
+            </li>
 
-          <li>
-            <img src="./images/works/lab.jpeg" alt="бирка с логотипом" width="370" height="294" />
-            <h2 class="site">Проект LAB</h2>
-            <p class="profession" lang="en">Маркетинг</p>
-          </li>
-
-          <li>
-            <img
-              src="./images/works/growing-business.jpeg"
-              alt="ноутбук"
-              width="370"
-              height="294"
-            />
-            <h2 class="site">Growing Business</h2>
-            <p class="profession" lang="en">Приложение</p>
-          </li>
-        </ul>
+            <li>
+              <img
+                src="./images/works/growing-business.jpeg"
+                alt="ноутбук"
+                width="370"
+                height="294"
+              />
+              <h2 class="site">Growing Business</h2>
+              <p class="profession" lang="en">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer section -->
-    <footer class="footer container">
-      <a class="logo-link" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
-      <address class="address">
-        г. Киев, пр-т Леси Украинки, 26
-        <ul>
-          <li><a class="address-mail" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="address-phone" href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+    <footer class="footer section">
+      <div class="footer-container">
+        <a class="logo-link-footer" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
+        <address class="address">
+          <p class="add">Киев, пр-т Леси Украинки, 26</p>
+          <ul>
+            <li><a class="address-mail" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="address-phone" href="tel:+380991111111">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
