--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       </div>
     </header>
 
+    <div class="line-container"></div>
+
     <!-- Main section -->
     <main>
       <!-- Hero section -->
@@ -123,27 +125,27 @@
       <section class="team">
         <div class="container">
           <h3 class="it-team">Наша команда</h3>
-          <ul class="team-list container">
+          <ul class="team-list">
             <li class="team-item">
-              <img class="team-img" src="./images/team/img1.jpeg" alt="сотрудник-1" />
+              <img class="team-img" src="./images/team/img1.jpeg" alt="сотрудник-1" width="270" />
               <h3 class="it">Игорь Демьяненко</h3>
               <p class="profession" lang="en">Product Designer</p>
             </li>
 
             <li class="team-item">
-              <img class="team-img" src="./images/team/img2.jpeg" alt="сотрудник-2" />
+              <img class="team-img" src="./images/team/img2.jpeg" alt="сотрудник-2" width="270" />
               <h3 class="it">Ольга Репина</h3>
               <p class="profession" lang="en">Frontend Developer</p>
             </li>
 
             <li class="team-item">
-              <img class="team-img" src="./images/team/img3.jpeg" alt="сотрудник-3" />
+              <img class="team-img" src="./images/team/img3.jpeg" alt="сотрудник-3" width="270" />
               <h3 class="it">Николай Тарасов</h3>
               <p class="profession" lang="en">Marketing</p>
             </li>
 
             <li class="team-item">
-              <img class="team-img" src="./images/team/img4.jpeg" alt="сотрудник-4" />
+              <img class="team-img" src="./images/team/img4.jpeg" alt="сотрудник-4" width="270" />
               <h3 class="it">Михаил Ермаков</h3>
               <p class="profession" lang="en">UI Designer</p>
             </li>
