--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <section class="section portfolio">
         <div class="container">
           <h1 class="portfolio"></h1>
-          <ul class="list-container">
+          <ul class="list-but">
             <li><button class="all button current" type="button">Все</button></li>
             <li><button class="web button current" type="button">Веб-сайты</button></li>
             <li><button class="app button current" type="button">Приложения</button></li>
