--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Header section -->
 
     <header class="header">
-      <div class="container pege-header-container">
+      <div class="container main-nav">
         <nav class="header-nav">
           <a class="logo-link" href="" lang="en">Web<span class="accent">Studio</span></a>
           <ul class="header-list">
@@ -38,8 +38,14 @@
             </li>
           </ul>
         </nav>
-        <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul class="kontakt">
+          <li class="item">
+            <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -57,8 +63,8 @@
       </section>
 
       <section class="about">
-        <div class="container pege-header-container">
-          <ul class="page-about header-nav">
+        <div class="container">
+          <ul class="page-about">
             <li>
               <h2 class="about-title">Внимание к деталям</h2>
               <p class="about-item">
@@ -129,33 +135,33 @@
             <li class="team-item">
               <img class="team-img" src="./images/team/img1.jpeg" alt="сотрудник-1" width="270" />
               <h3 class="it">Игорь Демьяненко</h3>
-              <p class="profession" lang="en">Product Designer</p>
+              <p class="it-profession" lang="en">Product Designer</p>
             </li>
 
             <li class="team-item">
               <img class="team-img" src="./images/team/img2.jpeg" alt="сотрудник-2" width="270" />
               <h3 class="it">Ольга Репина</h3>
-              <p class="profession" lang="en">Frontend Developer</p>
+              <p class="it-profession" lang="en">Frontend Developer</p>
             </li>
 
             <li class="team-item">
               <img class="team-img" src="./images/team/img3.jpeg" alt="сотрудник-3" width="270" />
               <h3 class="it">Николай Тарасов</h3>
-              <p class="profession" lang="en">Marketing</p>
+              <p class="it-profession" lang="en">Marketing</p>
             </li>
 
             <li class="team-item">
               <img class="team-img" src="./images/team/img4.jpeg" alt="сотрудник-4" width="270" />
               <h3 class="it">Михаил Ермаков</h3>
-              <p class="profession" lang="en">UI Designer</p>
+              <p class="it-profession" lang="en">UI Designer</p>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- Footer section -->
-    <footer class="footer section">
-      <div class="footer-container">
+    <footer class="footer">
+      <div class="container">
         <a class="logo-link-footer" href="" lang="en">Web<span class="logo-accent">Studio</span></a>
         <address class="address">
           <p class="add">Киев, пр-т Леси Украинки, 26</p>
