--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
         <address class="address">
           <p class="add">Киев, пр-т Леси Украинки, 26</p>
           <ul>
-            <li><a class="address-mail" href="mailto:info@example.com">info@example.com</a></li>
+            <li class="mail">
+              <a class="address-mail" href="mailto:info@example.com">info@example.com</a>
+            </li>
             <li><a class="address-phone" href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
