--- a/portfolio.html
+++ b/portfolio.html
@@ -45,14 +45,13 @@
         </ul>
       </div>
     </header>
-    <div class="line-container"></div>
 
     <!-- Main section -->
 
     <main>
       <!-- Portfolio section -->
 
-      <section class="section portfolio">
+      <section class="img-portfolio">
         <div class="container">
           <ul class="list-but">
             <li><button class="all button current" type="button">Все</button></li>
@@ -62,116 +61,103 @@
             <li><button class="markt button current" type="button">Маркетинг</button></li>
           </ul>
         </div>
-      </section>
-      <section class="img-portfolio">
         <div class="img-container container">
           <ul class="img-list">
-            <li>
-              <img
-                class="picture"
-                src="./images/works/img.jpeg"
-                alt="ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="site">Технокряк</h2>
-              <p class="profession" lang="ru">Веб-сайт</p>
+            <li class="border">
+              <img class="picture" src="./images/works/img.jpeg" alt="ноутбук" width="370" />
+              <div class="textbild">
+                <h2 class="site">Технокряк</h2>
+                <p class="profession" lang="ru">Веб-сайт</p>
+              </div>
             </li>
 
-            <li>
+            <li class="border">
               <img
                 class="picture"
                 src="./images/works/poster.jpeg"
                 alt="баскетболисты"
                 width="370"
-                height="294"
               />
-              <h2 class="site">Постер New Orlean vs Golden Star</h2>
-              <p class="profession" lang="en">Дизайн</p>
+              <div class="textbild">
+                <h2 class="site">Постер New Orlean vs Golden Star</h2>
+                <p class="profession" lang="en">Дизайн</p>
+              </div>
             </li>
 
-            <li>
+            <li class="border">
               <img
                 class="picture"
                 src="./images/works/restourant.jpeg"
                 alt="баскетболисты"
                 width="370"
-                height="294"
               />
-              <h2 class="site">Ресторан Seafood</h2>
-              <p class="profession" lang="en">Приложение</p>
+              <div class="textbild">
+                <h2 class="site">Ресторан Seafood</h2>
+                <p class="profession" lang="en">Приложение</p>
+              </div>
             </li>
 
-            <li>
-              <img
-                class="picture"
-                src="./images/works/prime.jpeg"
-                alt="наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="site">Проект Prime</h2>
-              <p class="profession" lang="en">Маркетинг</p>
+            <li class="border">
+              <img class="picture" src="./images/works/prime.jpeg" alt="наушники" width="370" />
+              <div class="textbild">
+                <h2 class="site">Проект Prime</h2>
+                <p class="profession" lang="en">Маркетинг</p>
+              </div>
             </li>
 
-            <li>
-              <img
-                class="picture"
-                src="./images/works/boxes.jpeg"
-                alt="две коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="site">Проект Boxes</h2>
-              <p class="profession" lang="en">Приложение</p>
+            <li class="border">
+              <img class="picture" src="./images/works/boxes.jpeg" alt="две коробки" width="370" />
+              <div class="textbild">
+                <h2 class="site">Проект Boxes</h2>
+                <p class="profession" lang="en">Приложение</p>
+              </div>
             </li>
 
-            <li>
+            <li class="border">
               <img
                 class="picture"
                 src="./images/works/inspiration.jpeg"
                 alt="компьютер"
                 width="370"
-                height="294"
               />
-              <h2 class="site">Inspiration has no Borders</h2>
-              <p class="profession" lang="en">Веб-сайт</p>
+              <div class="textbild">
+                <h2 class="site">Inspiration has no Borders</h2>
+                <p class="profession" lang="en">Веб-сайт</p>
+              </div>
             </li>
 
-            <li>
-              <img
-                class="picture"
-                src="./images/works/izdanie.jpeg"
-                alt="книга"
-                width="370"
-                height="294"
-              />
-              <h2 class="site">Издание Limited Edition</h2>
-              <p class="profession" lang="en">Дизайн</p>
+            <li class="border">
+              <img class="picture" src="./images/works/izdanie.jpeg" alt="книга" width="370" />
+              <div class="textbild">
+                <h2 class="site">Издание Limited Edition</h2>
+                <p class="profession" lang="en">Дизайн</p>
+              </div>
             </li>
 
-            <li>
+            <li class="border">
               <img
                 class="picture"
                 src="./images/works/lab.jpeg"
                 alt="бирка с логотипом"
                 width="370"
-                height="294"
               />
-              <h2 class="site">Проект LAB</h2>
-              <p class="profession" lang="en">Маркетинг</p>
+              <div class="textbild">
+                <h2 class="site">Проект LAB</h2>
+                <p class="profession" lang="en">Маркетинг</p>
+              </div>
             </li>
 
-            <li>
+            <li class="border">
               <img
                 class="picture"
                 src="./images/works/growing-business.jpeg"
                 alt="ноутбук"
                 width="370"
-                height="294"
               />
-              <h2 class="site">Growing Business</h2>
-              <p class="profession" lang="en">Приложение</p>
+              <div class="textbild">
+                <h2 class="site">Growing Business</h2>
+                <p class="profession" lang="en">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -184,7 +170,9 @@
         <address class="address">
           <p class="add">Киев, пр-т Леси Украинки, 26</p>
           <ul>
-            <li><a class="address-mail" href="mailto:info@example.com">info@example.com</a></li>
+            <li class="mail">
+              <a class="address-mail" href="mailto:info@example.com">info@example.com</a>
+            </li>
             <li><a class="address-phone" href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
