--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
       <section class="about">
         <div class="container">
           <ul class="page-about">
-            <li>
+            <li class="feature-1">
               <h2 class="about-title">Внимание к деталям</h2>
               <p class="about-item">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="feature-2">
               <h2 class="about-title">Пунктуальность</h2>
               <p class="about-item">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="feature-3">
               <h2 class="about-title">Планирование</h2>
               <p class="about-item">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="feature-4">
               <h2 class="about-title">Современные технологии</h2>
               <p class="about-item">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
