--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="./css/styles.css " />
   </head>
   <body class="page">
+    <div>
+      <p>jisjic</p>
+    </div>
     <!-- Header section -->
 
     <header class="header">
